dc/s2n-quic-dc/src/snapshots/endpoint__tasks__tests__idle_wheel__recv_idle_wheel_reschedules_active_context.snap
---
source: dc/s2n-quic-dc/src/testing.rs
expression: logs
---
0:00:00.000000000 [main] DEBUG grow epoch=8
0:00:00.000000000 [main] TRACE m#task.recv_idle_wheel.drained[recv.0]=1
0:00:00.000000000 [main] TRACE m#task.recv_idle_wheel.drained[recv.0]=0
0:00:00.000000000 [main] TRACE m#task.recv_idle_wheel.drained[recv.0]=0
0:00:30.000000000 [main] TRACE c#test.recv_idle_wheel.receiver[task.wheel_drain]=1
0:00:30.000000000 [main] TRACE c#test.recv_idle_wheel.drain=1
0:00:30.000000000 [main] TRACE g#test.recv_idle_wheel.depth=-1
0:00:30.000000000 [main] TRACE c#test.recv_idle_wheel.sender[task.recv_idle_wheel_drain]=1
0:00:30.000000000 [main] TRACE c#test.recv_idle_wheel.enq=1
0:00:30.000000000 [main] TRACE g#test.recv_idle_wheel.depth=0
0:00:30.000000000 [main] TRACE m#test.recv_idle_wheel.depth_dist=0
0:00:30.000000000 [main] TRACE c#idle.recv.rescheduled=1
0:00:30.000000000 [main] TRACE m#task.recv_idle_wheel.drained[recv.0]=1
0:00:30.000000000 [main] TRACE m#task.recv_idle_wheel.drained[recv.0]=0
0:00:31.000000000 [main] TRACE c#test.recv_idle_wheel.receiver[task.wheel_drain]=1
0:00:31.000000000 [main] TRACE c#test.recv_idle_wheel.drain=1
0:00:31.000000000 [main] TRACE g#test.recv_idle_wheel.depth=-1
0:00:31.000000000 [main] TRACE c#idle.recv.expired=1
0:00:31.000000000 [main] TRACE m#task.recv_idle_wheel.drained[recv.0]=0
0:00:31.000000000 [main] TRACE c#test.peer_dead.recv.events=1
0:00:31.000000000 [main] TRACE c#test.peer_dead.recv.broadcasted=1
