dc/s2n-quic-dc/src/snapshots/endpoint__tasks__tests__idle_wheel__send_idle_wheel_no_inflight_does_not_mark_dead.snap
---
source: dc/s2n-quic-dc/src/testing.rs
assertion_line: 352
expression: logs
---
0:00:00.000000000 [main] DEBUG grow epoch=8
0:00:00.000000000 [main] DEBUG setting peer data addresses peer=127.0.0.1:4433 addrs=[SocketAddressV6([::ffff:127.0.0.1]:4433)]
0:00:00.000000000 [main] DEBUG deriving sealer for credentials credentials=0xa5a69ae25d5f3678f5373f68bc3c106d:0 peer_addr=127.0.0.1:4433 sender_idx=0
0:00:00.000000000 [main] TRACE g#send.context.count[send.0]=1
0:00:00.000000000 [main] TRACE m#task.idle_wheel.drained[send.0]=1
0:00:00.000000000 [main] TRACE m#task.idle_wheel.drained[send.0]=0
0:00:00.000000000 [main] TRACE m#task.idle_wheel.drained[send.0]=0
0:00:30.000000000 [main] TRACE c#test.idle_wheel.receiver[task.wheel_drain]=1
0:00:30.000000000 [main] TRACE c#test.idle_wheel.drain=1
0:00:30.000000000 [main] TRACE g#test.idle_wheel.depth=-1
0:00:30.000000000 [main] TRACE g#send.context.count[send.0]=0
0:00:30.000000000 [main] DEBUG invalidating send context id=0x25a69ae25d5f3678f5373f68bc3c106d sender_idx=0
0:00:30.000000000 [main] TRACE c#send.inflight.drain.expire[send.0]=0
0:00:30.000000000 [main] TRACE c#idle.send.expired=1
0:00:30.000000000 [main] TRACE m#task.idle_wheel.drained[send.0]=0
